--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,14 +4,14 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [
-      "node"
-    ]
+      "@angular/localize"
+    ],
+    "resolveJsonModule": true 
   },
   "files": [
-    "src/main.ts",
-    "src/main.server.ts",
-    "server.ts"
+    "src/main.ts"
   ],
+  
   "include": [
     "src/**/*.d.ts"
   ]
